Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/TargetType26.out
TargetType26.java:16:11: compiler.err.prob.found.req: (compiler.misc.infer.no.conforming.assignment.exists: Z, (compiler.misc.not.a.functional.intf: java.lang.Object))
1 error
